--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-pytorch>=1.0
-gym>=0.10.9
+gym==0.10.9
+pytest==4.3.1
+matplotlib==3.0.3
+torchvision==0.2.2.post3
+https://download.pytorch.org/whl/cpu/torch-0.4.0-cp36-cp36m-linux_x86_64.whl
